<resources>
    <string name="app_name">LaSalleCatalunya</string>
    <string name="google_maps_api_key">AIzaSyAprP-uJv4hnhyd_6svpjTT3S75XEp-owo</string>
    <string name="register">Registrarse</string>
    <string name="login">Entrar</string>
    <string name="error1">Llena todos los campos!</string>
    <string name="error2">Este nombre de usuario ya está en uso!</string>
    <string name="error3">Este correo ya está en uso!</string>
    <string name="error4">Las contraseñas no coinciden!</string>
    <string name="error5">Datos incorrectos!</string>
    <string name="correu_nom_hint">Nombre de usuario o correo</string>
    <string name="password_hint">Contraseña</string>
    <string name="confirm_hint">Confirmar Contraseña</string>
    <string name="lastname_hint">Apellido</string>
    <string name="name_hint">Nombre</string>
    <string name="username_hint">Nombre de usuario</string>
    <string name="email_hint">Correo</string>
    <string name="login_title">Entrada para admins</string>
    <string name="register_title">Registrar un nuevo admin</string>
    <string name="infantil">Infantil</string>
    <string name="primaria">Primaria</string>
    <string name="batxillerat">BAT</string>
    <string name="fp">FP</string>
    <string name="universitat">Universidad</string>
    <string name="sort_name">Ordenar por nombre</string>
    <string name="logout">Cerrar sessión</string>
    <string name="add_title">Crear un nuevo centro</string>
    <string name="spinner_title">Muestra</string>
    <string name="map">Mapa</string>
    <string name="list">Lista</string>
    <string name="nom_centre">Nombre del centro</string>
    <string name="adreca_centre">Dirección del centro</string>
    <string name="add_school">Crear nuevo centro</string>
    <string name="description_hint">Descripción</string>
    <string name="provincia">Provincia</string>
    <string name="please_wait">Un momento por favor…</string>
    <string name="eso">ESO</string>
    <string name="location_permission_title">Acceder a la ubicación</string>
    <string name="location_permission_msg">Para poder acceder a su ubicación, necesitamos que acepte los permisos pulsando aceptar en el mensaje siguiente.</string>
    <string name="ok">Vale</string>
    <string name="error">Error al añadir la nueva escuela</string>
    <string name="success">Escuela añadida con éxito</string>
    <string name="error_center">No se han encontrado centros</string>
    <string name="errorTitle">Error</string>
    <string name="deleteError">Error al eliminar escuela</string>
</resources>
